# Fredholm

./: CMakeLists.txt  README.md  config.h  draw_solution.gpl  main.cu  tests.h
